[tool.poetry]
authors = ["Ken Van Haren <kenvanharen@gmail.com>"]
description = ""
license = "BSD-3-clause"
name = "stripe-ltv"
version = "0.1.0"

[tool.poetry.dependencies]
dags-bi = "^0.1.0"
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
